[project]
name = "fastmcp-ai-agent-bridge"
version = "0.1.2"
description = "Bridge for AI Agents to leverage FastMCP"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.4.5",
]


[dependency-groups]
dev = [
  "pytest",
  "pytest-mock",
  "pytest-asyncio",
  "ruff",
  "basedpyright>=1.30.1",
]

[tool.ruff]
target-version = "py313"
lint.fixable = ["ALL"]
lint.ignore = [
    "COM812", 
    "PLR0917", # Ignore too many positional arguments
    "PLR0913", # Ignore too many arguments
    "ARG002", # Ignore unused arguments
]
lint.extend-select = [
    "A",
    "ARG",
    "B",
    "C4",
    "COM",
    "DTZ",
    "E",
    "EM",
    "F",
    "FURB",
    "I",
    "LOG",
    "N",
    "PERF",
    "PIE",
    "PLR",
    "PLW",
    "PT",
    "PTH",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "TC",
    "TID",
    "TRY",
    "UP",
    "W",
]

line-length = 140

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = ["-s", "-vvv", "--import-mode=importlib"]
pythonpath = ["."]

[tool.ruff.lint.extend-per-file-ignores]
"*/tests/**" = [ 
    "S101", # Ignore asserts
    "DTZ005", # Ignore datetime.UTC
    "PLR2004", # Ignore magic values
    "PLR6301", # Ignore could be class or static method
    "FURB118", # Ignore functions for extracting values from tuple
    "S101", # Ignore asserts in tests
    "ARG001", # Ignore unused arguments
    "ARG002", # Ignore unused arguments
    "S607", # Starting a subprocess with a partial path
    "S603", # Ignore untrusted input in subprocesses
]
"**/references/*" = ["ALL"]
"**/example-*.py" = ["ALL"]



[tool.pyright]
reportExplicitAny = false
reportMissingTypeStubs = false


[tool.uv.workspace]
members = [
    "fastmcp-ai-agent-bridge-pydantic-ai",
]