[project]
name = "fastmcp-ai-agent-bridge-pydantic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.4.5",
    "logfire>=3.25.0",
    "pydantic-ai>=0.4.4",
]

[dependency-groups]
dev = [
  "pytest",
  "pytest-mock",
  "pytest-asyncio",
  "ruff",
  "basedpyright>=1.30.1",

]
lint = [
  "ruff"
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fastmcp_ai_agent_bridge"]

[tool.hatch.build.targets.sdist]
packages = ["src/fastmcp_ai_agent_bridge"]

[tool.ruff]
extend="../pyproject.toml"

[tool.pyright]
extends = "../pyproject.toml"
