[project]
name = "fastmcp-ai-agent-bridge-pydantic-ai"
version = "0.1.1"
description = "Pydantic AI Agent Bridge"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.4.5",
    "logfire>=3.25.0",
    "pydantic-ai>=0.4.4",
]

[dependency-groups]
dev = [
  "pytest",
  "pytest-mock",
  "pytest-asyncio",
  "ruff",
  "basedpyright>=1.30.1",

]
lint = [
  "ruff"
]

[tool.ruff]
extend="../pyproject.toml"

[tool.pyright]
extends = "../pyproject.toml"
